# simple-pos

./: .geminiignore  .gitignore  BACKEND_DEEP_DIVE.md  BACKEND_TREE.md  CLAUDE.md  COMPONENT_TREE.md  E2E_MIGRATION_TODO.md  GEMINI.md  Implement Accumulated Sales and Stock Report.md.resolved  Improved Implementation Plant in todo list.md  README.md  THME_LIBRARY_TODO.md  TODO.md  TODO_PERF.md  TODO_UI_PERF.md  TODO_settings_refactor.md  eslint.config.mjs  measure-tauri.sh  next.config.ts  package-lock.json  package.json  playwright.config.ts  security_review.text  test-cdp.mjs  wdio.conf.mjs
src-tauri/database/: .gitignore  Cargo.toml  README.md
src-tauri/database/migrations/2025-11-13-084343-0000_Product/: down.sql  up.sql
src-tauri/database/migrations/2025-11-13-084349-0000_Stock/: down.sql  up.sql
src-tauri/database/migrations/2025-11-13-084405-0000_ReceiptList/: down.sql  up.sql
src-tauri/database/migrations/2025-11-13-084410-0000_Receipt/: down.sql  up.sql
src-tauri/database/migrations/2026-02-05-000000_Category/: up.sql
src-tauri/database/migrations/2026-02-23-143000_volume_integer_scaling/: down.sql  up.sql
src-tauri/database/migrations/2026-02-25-210400_add_use_recipe_stock_to_product/: down.sql  up.sql
src-tauri/database/migrations/2026-02-26-131111-0000_add_image_object_position/: down.sql  up.sql
src-tauri/database/src/: connection.rs  lib.rs  schema.rs
src-tauri/database/src/Product/: mod.rs  model.rs
src-tauri/database/test/: database_test.rs
src-tauri/database/tests/: database_test.rs  database_tests.rs  sqlcipher_encryption.rs
(+493 files in other folders)
